bug fixed: overflow-y due to explit body height

--- a/HTML_CSS/task-8/styles.css
+++ b/HTML_CSS/task-8/styles.css
@@ -12,7 +12,7 @@ body {
     align-items: center;
     min-height: 100vh;
     font-family: 'Arial', sans-serif; 
-    height: 100vh;
+    min-height: 100vh;
     background: linear-gradient(to right, rgb(44, 86, 61), rgb(88, 58, 134));
 }
 
